Fix spacing of feature-items on mobile.

--- a/client/landing/src/stylesheets/index.scss
+++ b/client/landing/src/stylesheets/index.scss
@@ -170,14 +170,14 @@ body {
 
   @include media-breakpoint-down(md) {
     border-bottom: 1px solid $gray-300;
-    padding: ($spacer * 2) $wrapper-padding-x;
+    padding: ($spacer * 3.5) $wrapper-padding-x;
 
     &:first-child {
       padding-top: calc(#{$spacer * 2} + #{$edge-angle-size});
     }
 
     &:last-child {
-      padding-bottom: calc(#{$spacer * 2} + #{$edge-angle-size});
+      padding-bottom: calc(#{$spacer * 4} + #{$edge-angle-size});
     }
 
     &:not(:last-child):before {
